--- a/noticias-cidade/index.html
+++ b/noticias-cidade/index.html
@@ -23,9 +23,62 @@
             </div>
 
             <div id="conteudo">
-                <div id="primario"></div>
-                <div id="secundario"></div>
-                <div id="lateral"></div>
+                <div id="primario">
+                    <div class="caixa destaque">
+                        <h2>Destaque</h2>
+                        <div class="caixa-conteudo">
+                            <h3>Nova legislação</h3>
+                            <img class="imagem-principal" src="imagens/taxi.jpg" width="100%">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </p>
+                            <a href="">Leia mais!</a>
+                        </div>
+                    </div>
+                </div>
+                <div id="secundario">
+                    <div class="caixa entrevista">
+                        <h2>Última entrevista</h2>
+                        <div class="caixa-conteudo">
+                            <h3>Entrevista com Cardiologista</h3>
+                            <img class="imagem-principal" src="imagens/doutor.jpg" width="100%">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            </p>
+                            <a href="">Leia mais!</a>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div id="lateral">
+                    <div class="caixa">
+                        <h2>Colunistas</h2>
+                        <div class="caixa-conteudo">
+                            <ul>
+                                <li><a href="">Beyonce</a></li>
+                                <li><a href="">Lady Gaga</a></li>
+                                <li><a href="">Pink</a></li>
+                                <li><a href="">Rihanna</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <h2>News</h2>
+                        <div class="caixa-conteudo">
+                            <form>
+                                <div>
+                                    <label for="email"></label>
+                                    <input type="text" name="email"
+                                    id="email" placeholder="E-mail">
+                                </div>
+                                <div>
+                                    <input class="submit" type="submit" value="Cadastrar">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
