--- a/noticias-cidade/brasil.html
+++ b/noticias-cidade/brasil.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/estilo.css">
     </head>
 
-    <body class="home">
+    <body id="duas-colunas" class="brasil">
         <div id="container">
             <div id="topo">
                 <h1 class="logo">Notícias Cidade</h1>
@@ -73,54 +73,6 @@
                     </div>
                 </div>
 
-                <div id="secundario">
-                    <div class="caixa entrevista">
-                        <h2>Última entrevista</h2>
-                        <div class="caixa-conteudo">
-                            <h3>Entrevista com Cardiologista</h3>
-                            <img class="imagem-principal" src="imagens/doutor.jpg" width="100%">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            </p>
-                            <a href="">Leia mais!</a>
-                        </div>
-                    </div>
-                    <div class="caixa">
-                        <h2>Últimas Notícias</h2>
-                        <div class="caixa-conteudo">
-                            <ul id="lista-noticias">
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/mundo.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>Etiam non luctus ante...</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/taxi.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>Etiam non luctus ante...</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/doutor.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>Etiam non luctus ante...</p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/mundo.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>Etiam non luctus ante...</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
                 
                 <div id="lateral">
                     <div class="caixa">
