--- a/museu-nacional/index.html
+++ b/museu-nacional/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Museu Nacional</title>
+        <meta charset="utf-8">
 
+        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/estilo.css">
     </head>
 
     <body>
-        
+
+        <div id="container">
+            <header>
+                <div id="logo">
+                    <h1><a href="">Museu Nacional</a></h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Exposições</a></li>
+                        <li><a href="#">Pesquisa</a></li>
+                        <li><a href="#">Acervo</a></li>
+                        <li><a href="#">Videos</a></li>
+                        <li><a href="#">Fotos</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <div id="principal">
+                <div id="conteudo">
+                    <section id="capa">
+                        <img src="../museu-nacional/imagens/museu.png">
+                    </section>
+
+                    <section id="postagens">
+                        
+                    </section>
+                </div>
+
+                <aside>
+                    <section id="depoimento">
+                        <img src="../museu-nacional/imagens/depoimento.png">
+                    </section>
+
+                    <section id="visita">
+                        <h4>Faça uma visita</h4>
+                        <form>
+                            <fieldset>
+                                <legend>Selecione uma data</legend>
+
+                                <label for="data">Data</label>
+                                <input class="campo" type="text" id="data" value="dd/mm/aaaa">
+
+                                <label for="qtd">Qta pessoas</label>
+                                <input class="campo" style="width: 30px;" type="text" id="qtd" value="1">
+                            </fieldset>
+
+                            <input class="botao" type="submit" value="Verificar disponibilidade">
+                        </form>
+                    </section>
+
+                    <section id="galeria">
+                        <h4>Galeria de fotos</h4>
+                        <a href="">
+                            <img src="../museu-nacional/imagens/imagem1.jpg" height="93" width="93" alt="Descrição">
+                        </a>
+
+                        <a href="">
+                            <img src="../museu-nacional/imagens/imagem2.jpg" height="93" width="93">
+                        </a>
+
+                        <a href="">
+                            <img src="../museu-nacional/imagens/imagem3.jpg" height="93" width="93">
+                        </a>
+
+                        <a href="">
+                            <img src="../museu-nacional/imagens/imagem4.jpg" height="93" width="93">
+                        </a>
+                    </section>
+                </aside>
+
+            </div>
+
+        </div>
+
     </body>
 </html>
