--- a/museu-nacional/index.html
+++ b/museu-nacional/index.html
@@ -35,7 +35,49 @@
                     </section>
 
                     <section id="postagens">
-                        
+
+                        <article id="video">
+                            <h3>Vídeo: Conheça o museu!</h3>
+                            <iframe width="310" height="170" src="https://www.youtube.com/embed/RGUYb-hivrc?si=1CS_Ct8G3ZAZVZYx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </article>
+
+                        <article id="mapa">
+                            <h3>Mapa: Encontro o museu!</h3>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58816.722996702!2d-43.27072851562503!3d-22.87478909482202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1719921104388!5m2!1spt-BR!2sbr" width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </article>
+
+                        <article id="exposicoes">
+                            <h3>Exposições</h3>
+                            <ul>
+                                <li>
+                                    <a href="">O maravilhoso mundo dos insetos</a>
+                                </li>
+                                <li>
+                                    <a href="">Preguiça gigante</a>
+                                </li>
+                                <li>
+                                    <a href="">Plantas do Brasil</a>
+                                </li>
+                                <li>
+                                    <a href="">Egito antigo</a>
+                                </li>
+                                <li>
+                                    <a href="">Brasil imperial</a>
+                                </li>
+                                <li>
+                                    <a href="#"><strong>Veja todos (65)</strong></a>
+                                </li>
+                            </ul>
+                        </article>
+
+                        <article id="historia">
+                            <h3>200 anos de história</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque gravida velit sit amet congue ultricies. Morbi aliquet risus vel nibh congue, sed rutrum urna ullamcorper. Aenean non iaculis metus, et scelerisque erat. Suspendisse convallis sapien diam. Donec maximus tortor sed dui aliquet tristique. Ut porttitor est vitae neque auctor luctus.
+                            </p>
+                            <a href=""><strong>Leia mais</strong></a>
+                        </article>
+
                     </section>
                 </div>
 
@@ -80,6 +122,22 @@
                         </a>
                     </section>
                 </aside>
+                
+                <footer>
+                    <p>
+                        <a href="#">Home</a>
+                        <a href="#">Exposições</a>
+                        <a href="#">Pesquisa</a>
+                        <a href="#">Acervo</a>
+                        <a href="#">Videos</a>
+                        <a href="#">Fotos</a>
+                        <a href="#">Contato</a>
+                    </p>
+
+                    <p>
+                        2024 <a href="">Museu Nacional</a> Todos os direitos reservados.
+                    </p>
+                </footer>
 
             </div>
 
